--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic
-title: Lio Xu
+title: Lio
 subtitle: A Special Zone for Me and My Beloved Zhang
 welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank">Download the theme</a>
 description: To record my thoughts.
